--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,15 @@ body {
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #fa8072;
 }
 
 .resume-main {
-	background-color: #fffefc;
+	background-color: #a736a5;
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #7f5221;
 }
 
 /* Styles for lists in the document */
