--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .resume-aside {
-	background-color: #b31111;
+	background-color: #f93535;
 }
 
 /* Styles for lists in the document */
