--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,11 @@
 /* Styles for the body */
 
 body {
-	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #202030;
-	background-color: #009808;
-}
+	font-family: "Ojuju", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: 300;
+	font-style: normal;
+  }
 
 /* <uniquifier>: Use a unique and descriptive class name*/
 
