--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
 .ojuju-title {
   font-family: "Ojuju", sans-serif;
   font-optical-sizing: auto;
+  color: #472f5b;
   font-weight: 800;
   font-style: normal;
 }
