--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 .ojuju-title {
   font-family: "Ojuju", sans-serif;
   font-optical-sizing: auto;
-  color: #472f5b;
+  color: #6d00c6;
   font-weight: 800;
   font-style: normal;
 }
